# bytebuddy

./: .gitignore  Makefile
doc/: Checkpoint.tex  Makefile  Report.tex
extension/: sad_tamagotchi.txt
extension/tamagotchi/: CMakeLists.txt  README  TODO  display_tamagotchi.c  display_tamagotchi.h  main.c  savefile.txt  welcome_screen.c  welcome_screen.h
extension/tamagotchi/animation/: menu_frames.h  status_frames.h  tamagotchi_frames.h
extension/tamagotchi/include/: centre_helper.h  change_stats.h  character_profile.h  client.h  display_tamagotchi.h  eat_animation.h  food_opt.h  happy_emote.h  initialise_tamagotchi.h  load_stats.h  load_stats_test.h  pass_away.h  play_opt.h  poop_opt.h  save_opt.h  save_stats.h  select_menu.h  send_chat.h  server.h  sick_opt.h  stats_def.h  stats_opt.h  welcome_screen.h
extension/tamagotchi/src/: centre_helper.c  change_stats.c  display_tamagotchi.c  eat_animation.c  food_opt.c  happy_emote.c  intialise_tamagotchi.c  load_stats.c  load_stats_test.c  main.c  pass_away.c  play_opt.c  poop_opt.c  save_opt.c  save_stats.c  select_menu.c  send_chat.c  server.c  sick_opt.c  stats_opt.c  welcome_screen.c
include/: decoder.h  dpiReg.h
programs/: kernel8.img
src/: Makefile  ProcessorDef.h  decoder  decoder.c  dpiImm.c  dpiReg.c  dpiReg.h  emulate.c
src/assembler/: .gitignore  .nfs00000000a23e480f000000ec  Makefile  example  led_blink.s  test_output.txt  testoutb1  testoutb1vg
src/assembler/include/: branch_encoder.h  dpi_encoder.h  first_pass.h  helperfuncs.h  instruction_arr.h  notes.txt  pass_one.h  sdt_encoder.h  split_lines.h  symbol_table.h  table_def.h  testcond.h  tokenise.h  tokenise_instruction.h
src/assembler/src/: .nfs00000000401ee0090000008d  .nfs000000004144504800000097  assemble.c  assemble.c.save  branch_encoder.c  dpi_encoder.c  first_pass.c  helperfuncs.c  instruction_arr.c  pass_one.c  sdt_encoder.c  split_lines.c  symbol_table.c  testcond.c  tokenise.c  tokenise_instruction.c
src/assembler/valgrind_tests/: valgrind_test.sh
src/emulator/: Makefile
src/emulator/include/: binary_load.h  binary_load_test.h  (+18 more)
test/dpiImm/: dpiImm-add-test.c
(+22 files in other folders)
